// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components <XTab /> should render correctly -- active tab 1`] = `
<x-tab
  selected={true}
>
  <x-label>
    <span>
      Link
    </span>
  </x-label>
</x-tab>
`;

exports[`components <XTab /> should render correctly -- inactive tab 1`] = `
<x-tab
  selected={null}
>
  <x-label>
    <span>
      Link
    </span>
  </x-label>
</x-tab>
`;
